# axiom

./: .config.sh  .dockerignore  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CLA.md  CLI_Extended_Commands_V1.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Core Invariants v0.1.md  Core Invariants.md  DEFERRED.md  DEVELOPMENT_GUIDE.md  DREAM_Phase_V1_0_Implementation_Plan.md  Dockerfile  INSTALL.md  INVARIANTS.md  Installation Guide.md  LICENSE-DATA  LICENSE_WEIGHTS  MANIFEST.in  MIGRATION_PLAN.md  PERF_NOTES.md  PHASE_2_PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  STRUCT_SIZE_ISSUE.md  architecture_blueprint.json  axiom  axiom-cli.yaml  docker-compose.yml  jupyter_demo.py  justfile  package-lock.json  prometheus.yml  pyproject.toml  (+2 more)
crates/axiom-agent/: Cargo.toml
crates/axiom-agent/src/: adapter_command.rs  adapters_config.rs  config.rs  lib.rs  main.rs  meta_commands.rs  protocol.rs  tick_loop.rs
crates/axiom-agent/src/channels/: audio.rs  cli.rs  mod.rs  shell.rs  telegram.rs  vision.rs
crates/axiom-agent/src/effectors/: message.rs  mod.rs
crates/axiom-agent/src/ingester/: dataset.rs  markdown.rs  mod.rs
crates/axiom-agent/src/ml/: engine.rs  mod.rs
crates/axiom-agent/src/opensearch/: mod.rs
crates/axiom-agent/src/perceptors/: anchor_match.rs  decomposition_table.rs  mod.rs  temporal.rs  text.rs  vision_l0.rs
crates/axiom-agent/src/rest/: handlers.rs  mod.rs
crates/axiom-agent/src/telegram/: mod.rs
crates/axiom-agent/src/ws/: handler.rs  mod.rs  server.rs
crates/axiom-agent/tests/: cli_tests.rs  ingest_poetry_test.rs  meta_commands_tests.rs  ml_tests.rs  rest_tests.rs  shell_tests.rs  telegram_tests.rs  tick_loop_tests.rs  ws_tests.rs
crates/axiom-arbiter/: Cargo.toml
crates/axiom-arbiter/src/: ashti_processor.rs  com.rs  experience.rs  gridhash.rs  lib.rs  maya_processor.rs  reflector.rs  skillset.rs
crates/axiom-arbiter/tests/: arbiter_tests.rs  cognitive_depth_13a_tests.rs  cognitive_depth_13b_tests.rs  cognitive_depth_13c_tests.rs  cognitive_depth_13d_tests.rs  com_tests.rs  experience_tests.rs  gridhash_tests.rs  reflector_tests.rs  skillset_exchange_tests.rs  skillset_tests.rs
crates/axiom-bench/: Cargo.toml
crates/axiom-bench/benches/: core_bench.rs  domain_bench.rs  engine_bench.rs  fractal_bench.rs  frameweaver_overhead.rs  frontier_bench.rs  hot_path_regression.rs  integration_bench.rs  over_domain_bench.rs  shell_bench.rs  space_bench.rs  stress_bench.rs
crates/axiom-bench/src/: lib.rs
crates/axiom-broadcasting/: Cargo.toml
crates/axiom-broadcasting/src/: config.rs  lib.rs  server.rs  snapshot.rs  tests.rs
crates/axiom-config/: Cargo.toml
crates/axiom-config/src/: anchor.rs  domain_config.rs  dream_config.rs  heartbeat_config.rs  lib.rs  loader.rs  preset.rs  schema.rs  subsystem_dependencies.rs  watcher.rs
crates/axiom-config/tests/: domain_config_tests.rs  heartbeat_config_tests.rs  loader_tests.rs  preset_tests.rs  watcher_tests.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: connection.rs  event.rs  lib.rs  token.rs
crates/axiom-core/tests/: connection_tests.rs  event_tests.rs  token_tests.rs
crates/axiom-domain/: Cargo.toml
crates/axiom-domain/src/: ashti_core.rs  causal_horizon.rs  domain.rs  domain_state.rs  fractal_chain.rs  lib.rs  membrane.rs  physics.rs
crates/axiom-domain/tests/: ashti_core_tests.rs  causal_horizon_tests.rs  domain_tests.rs  fractal_chain_tests.rs  membrane_tests.rs  physics_tests.rs  speculative_grid_tests.rs
crates/axiom-neural/: Cargo.toml
crates/axiom-neural/src/: calibration.rs  config.rs  fft.rs  layers.rs  lib.rs  model.rs  normalize.rs  reactivation_depth.rs  weights.rs
crates/axiom-node/: Cargo.toml
crates/axiom-node/src/: commands.rs  config.rs  http.rs  lab.rs  main.rs  shutdown.rs  startup.rs  tick.rs
crates/axiom-observe/: Cargo.toml
crates/axiom-observe/src/: corpus.rs  main.rs  metrics.rs  report.rs  runner.rs  shard.rs  training.rs
crates/axiom-persist/: Cargo.toml
crates/axiom-persist/src/: auto.rs  error.rs  exchange.rs  format.rs  lib.rs  loader.rs  manifest.rs  writer.rs
crates/axiom-persist/tests/: autosave_tests.rs  boot_tests.rs  exchange_tests.rs  persist_tests.rs
crates/axiom-runtime/: Cargo.toml
crates/axiom-runtime/src/: adapters.rs  adaptive.rs  broadcast.rs  channel.rs  engine.rs  gateway.rs  guardian.rs  lib.rs  orchestrator.rs  result.rs  snapshot.rs  subsystem_gravity.rs
crates/axiom-runtime/tests/: adaptive_tests.rs  broadcast_tests.rs  config_watcher_tests.rs  dream_cli_tests.rs  dream_integration_tests.rs  dream_phase_smoke.rs  dream_scheduler_tests.rs  engine_tests.rs  event_bus_tests.rs  event_log_pruning_tests.rs  frameweaver_smoke_test.rs  gateway_channel_tests.rs  guardian_dream_tests.rs  guardian_tests.rs  phase_c_coordinator_tests.rs  process_and_observe_tests.rs  sentinel_parallel_search_tests.rs  sentinel_topology_tests.rs  sentinel_variable_tick_tests.rs  snapshot_tests.rs  tick_schedule_tests.rs
crates/axiom-space/: Cargo.toml
crates/axiom-space/src/: lib.rs  simd.rs
crates/axiom-space/tests/: simd_tests.rs  space_tests.rs
crates/axiom-workstation/: Cargo.toml  README.md
crates/axiom-workstation/src/: app.rs  connection.rs  main.rs  settings.rs
runtime/: Cargo.toml  size_check.rs
runtime/benches/: connection_v3_bench.rs  graph_bench.rs  grid_bench.rs  intuition_bench.rs  upo_bench.rs
runtime/src/: arbiter.rs  ashti_processor.rs  causal_frontier.rs  clock.rs  com.rs  connection.rs  debug_sizes.rs  domain.rs  domain.rs.backup  event.rs  event_generator.rs  experience.rs  ffi.rs  heartbeat.rs  lib.rs  maya_processor.rs  physics_processor.rs  serialization_test.rs.bak  shell.rs  space.rs  token.rs  ucl_command.rs  ucl_tests.rs.bak  upo.rs
runtime/src/config/: loader.rs  mod.rs  tests.rs  tests.rs.bak
runtime/src/domain/: serialization_tests.rs.bak  simple_test.rs.bak  tests.rs  tests.rs.bak
runtime/tests/: cross_spec_validation.rs
tools/axiom-dashboard/: Cargo.toml
tools/axiom-dashboard/src/: app.rs  main.rs  protocol.rs  state.rs  ws_client.rs
(+762 files in other folders)
