# AXIOM Workspace
# Модульная архитектура: каждый архитектурный компонент — отдельный crate

[workspace]
resolver = "2"
members = [
    "crates/axiom-core",
    "crates/axiom-persist",
    "crates/axiom-genome",
    "crates/axiom-config",
    "crates/axiom-domain",
    "crates/axiom-space",
    "crates/axiom-shell",
    "crates/axiom-arbiter",
    "crates/axiom-heartbeat",
    "crates/axiom-frontier",
    "crates/axiom-upo",
    "crates/axiom-ucl",
    "crates/axiom-runtime",
    "crates/axiom-bench",
    "crates/axiom-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chernov Denys (@dchrnv)"]
license = "AGPL-3.0-only"

[workspace.dependencies]
# Общие зависимости — версии определяются здесь один раз
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bitvec = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
schemars = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rayon = "1"
