[package]
name = "axiom-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom-agent"
path = "src/main.rs"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-config = { path = "../axiom-config" }
axiom-ucl = { path = "../axiom-ucl" }
axiom-runtime = { path = "../axiom-runtime" }
axiom-genome = { path = "../axiom-genome" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
image = "0.25"
hound = "3"
tract-onnx = { version = "0.21", optional = true }

[features]
default = []
onnx = ["tract-onnx"]
