[package]
name = "axiom-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom-agent"
path = "src/main.rs"

[[bin]]
name = "axiom-cli"
path = "bin/axiom-cli.rs"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-config = { path = "../axiom-config" }
axiom-ucl = { path = "../axiom-ucl" }
axiom-runtime = { path = "../axiom-runtime" }
axiom-genome = { path = "../axiom-genome" }
axiom-persist = { path = "../axiom-persist" }
schemars.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
image = "0.25"
hound = "3"
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
onnx = ["tract-onnx"]
