[package]
name = "axiom-arbiter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Serde support для ExperienceTrace/TensionTrace (используется axiom-persist)
serde = ["dep:serde", "axiom-core/serde"]

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-config = { path = "../axiom-config" }
rayon = { workspace = true }

[dependencies.serde]
workspace = true
optional = true
