[package]
name = "axiom-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiom-core = { path = "../axiom-core" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
schemars.workspace = true
jsonschema = { version = "0.46", default-features = false }
notify.workspace = true
