[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Serde support для сериализации Token/Connection/Event (используется axiom-persist)
serde = ["dep:serde"]

[dependencies]
# Zero dependencies — фундамент системы

[dependencies.serde]
workspace = true
optional = true
