[package]
name = "axiom-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axiom standalone runtime node — живой когнитивный движок с WebSocket-интерфейсом"

[[bin]]
name = "axiom-node"
path = "src/main.rs"

[dependencies]
axiom-runtime    = { path = "../axiom-runtime", features = ["adapters"] }
axiom-broadcasting = { path = "../axiom-broadcasting" }
axiom-agent      = { path = "../axiom-agent" }
axiom-persist    = { path = "../axiom-persist" }
axiom-config     = { path = "../axiom-config" }
axiom-protocol   = { path = "../axiom-protocol" }
axiom-ucl        = { path = "../axiom-ucl" }

tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
serde            = { workspace = true }
serde_yaml       = { workspace = true }
serde_json       = { workspace = true }
axum             = { workspace = true }
tower-http       = { workspace = true }

clap             = { version = "4.5", features = ["derive"] }
anyhow           = "1"
