[package]
name = "axiom-persist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiom-core    = { path = "../axiom-core",    features = ["serde"] }
axiom-arbiter = { path = "../axiom-arbiter", features = ["serde"] }
axiom-runtime = { path = "../axiom-runtime" }
axiom-config  = { path = "../axiom-config" }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
bincode       = { workspace = true }
schemars      = { workspace = true }

[dev-dependencies]
axiom-ucl   = { path = "../axiom-ucl" }
axiom-agent = { path = "../axiom-agent" }
bincode     = { workspace = true }
