[package]
name = "axiom-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-config = { path = "../axiom-config" }
axiom-domain = { path = "../axiom-domain" }
axiom-space = { path = "../axiom-space" }
axiom-shell = { path = "../axiom-shell" }
axiom-arbiter = { path = "../axiom-arbiter" }
axiom-heartbeat = { path = "../axiom-heartbeat" }
axiom-frontier = { path = "../axiom-frontier" }
axiom-upo = { path = "../axiom-upo" }
axiom-ucl = { path = "../axiom-ucl" }
axiom-genome = { path = "../axiom-genome" }

rayon = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
adapters = ["serde"]

[dev-dependencies]
axiom-genome = { path = "../axiom-genome" }
axiom-config = { path = "../axiom-config" }
