[package]
name = "axiom-space"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Включить при -C target-cpu=native для авто-векторизации (AVX2/SSE4.2)
simd = []

[dependencies]
axiom-core = { path = "../axiom-core" }
serde      = { workspace = true }
serde_yaml = { workspace = true }
