[package]
name = "axiom-workstation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom-workstation"
path = "src/main.rs"

[dependencies]
axiom-protocol = { path = "../axiom-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = "0.13"
dirs = "5"
toml = "0.8"

[dev-dependencies]
axiom-broadcasting = { path = "../axiom-broadcasting" }
