[package]
name = "axiom-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom-dashboard"
path = "src/main.rs"

[dependencies]
eframe     = { version = "0.29", default-features = false, features = ["glow"] }
egui       = "0.29"
egui_plot  = "0.29"
tungstenite = "0.24"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
